P2/pods/app1.yaml
#this version is working
apiVersion: v1
kind: Pod
metadata:
  name: app1
spec:
  #hostNetwork: true
  containers:
  - name: app1
    image: nginx:1.14.2
    ports:
    - containerPort: 80
