P2/pods/app2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app2
spec:
  containers:
  - name: app2
    image: nginx:1.14.2
    ports:
    - containerPort: 80
    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: app2-volume
  volumes:
  - name: app2-volume
    hostPath:
      # directory location on host
      path: /IOT/app-volumes/app2

#apiVersion: v1
#kind: Pod
#metadata:
#  name: influxdb
#spec:
#  hostNetwork: true
#  containers:
#    - name: influxdb
#      image: influxdb
