P2/pods/app1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployement
  labels:
    app: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1 
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: app1-volume
      volumes:
      - name: app1-volume
        hostPath:
          path: /IOT/app-volumes/app1

---

apiVersion: v1
kind: Service
metadata:
  name: app1-service
spec:
  selector:
    app: app1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
