P2/pods/app2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployement
  labels:
    app: app2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app2 
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: app2-volume
      volumes:
      - name: app2-volume
        hostPath:
          path: /IOT/app-volumes/app2

---

apiVersion: v1
kind: Service
metadata:
  name: app2-service
spec:
  selector:
    app: app2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
