P2/pods/app3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3-deployement
  labels:
    app: app3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3 
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
      - name: app3
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: app3-volume
      volumes:
      - name: app3-volume
        hostPath:
          path: /IOT/app-volumes/app3

---

apiVersion: v1
kind: Service
metadata:
  name: app3-service
spec:
  selector:
    app: app3
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
