P2/pods/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
  - host: app1.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app1-service
            port:
              number: 8080
  - host: app2.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app2-service
            port:
              number: 8080
  - host: app3.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app3-service
            port:
              number: 8080
